welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: illegal start of simple expression
while (estFacemur() == false))      {
                             ^